// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClockContainer updates clock and message when time changes 1`] = `
<ClockContainer>
  <div
    id="clock-wrapper"
  >
    <NameForm>
      <div
        id="name-form"
      >
        <label
          className="name-label"
          htmlFor="name"
        >
          Hi. What's your name?
        </label>
        <input
          autoComplete="off"
          autoFocus={true}
          id="name"
          number="50"
          type="text"
        />
      </div>
    </NameForm>
    <Time
      hour="15"
      minute="59"
    >
      <div
        id="clock"
      >
        <span
          id="hour"
        >
          15
        </span>
        <span
          id="minute"
        >
          59
        </span>
      </div>
    </Time>
    <UnderClockMessage
      message="Good afternoon, null."
    >
      <div
        id="message-under-clock"
      >
        Good afternoon, null.
      </div>
    </UnderClockMessage>
  </div>
</ClockContainer>
`;

exports[`ClockContainer updates clock and message when time changes 2`] = `
<ClockContainer>
  <div
    id="clock-wrapper"
  >
    <NameForm>
      <div
        id="name-form"
      >
        <label
          className="name-label"
          htmlFor="name"
        >
          Hi. What's your name?
        </label>
        <input
          autoComplete="off"
          autoFocus={true}
          id="name"
          number="50"
          type="text"
        />
      </div>
    </NameForm>
    <Time
      hour="18"
      minute="00"
    >
      <div
        id="clock"
      >
        <span
          id="hour"
        >
          18
        </span>
        <span
          id="minute"
        >
          00
        </span>
      </div>
    </Time>
    <UnderClockMessage
      message="Good evening, null."
    >
      <div
        id="message-under-clock"
      >
        Good evening, null.
      </div>
    </UnderClockMessage>
  </div>
</ClockContainer>
`;
